# fake-or-not

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.database.dev.yml  docker-compose.yml  justfile  pyproject.toml
app/: config.py  main.py
app/controllers/: predictions.py  users.py
app/database/: connection.py
app/models/: refresh_token.py  user.py
app/schema/: prediction.py  token.py  user.py
app/services/: auth.py  data_clean.py  model.py  user.py
migrations/: env.py
migrations/versions/: 2025_07_16_2132-178aa47da434_add_tables_for_users_and_refresh_tokens.py  2025_07_20_0853-0179fc8399dc_add_tables_for_users_and_refresh_tokens.py  2025_07_21_1450-a071c64b9cdf_add_tables_for_users_and_refresh_tokens.py
model/: config.json  tokenizer_config.json
tests/: clean_test.py  conftest.py
tests/golden/: clean_tweets.txt  raw_tweets.txt
