[project]
name = "misinformation-detection-api"
version = "0.1.0"
description = "API for an LLM trained to detect misinformation in Tweets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.4",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.116.0",
    "pyjwt>=2.10.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ipython>=8.37.0",
    "pytest>=8.4.1",
]
